  Append 'm' attribute to pv_attr for missing PVs.
  Annotate CLVMD_CMD_SYNC_NAMES in decode_cmd.
  Remove enforcement of udev verification when using non-standard /dev location.
  Fix to preserve exclusive activation of mirror while up-converting.
  Reject allocation if number of extents is not divisible by area count.
  Fix issue preventing cluster mirror creation.
  Add activation/verify_udev_operations to lvm.conf, disabled by default.
  Call vg_mark_partial_lvs() before VG structure is returned from the cache.
  Remove unused internal flag ACTIVATE_EXCL from the code.
  Remove useless test of ACTIVATE_EXCL in lv_add_mirrors() clustered code path.
  Use lv_activate_opts struct instead of MERGING status flag.
  Use lv_activate_opts struct instead of ACTIVATE_EXCL status flag.
  Add lv_activate_opts structure for activation (replacing activation flags).
  Fix a problem with inconsistent pre-commit metadata on MISSING_PV devices.
  Add proper udev library context initialization and finalization to liblvm.
  Fix last snapshot removal to avoid table reload while a device is suspended.
  Use dm_get_suspended_counter in replacement critical_section logic.
  Downgrade critical_section errors to debug level until it is moved to libdm.
  Fix ignored background polling default in vgchange -ay.
  Fix pvmove activation sequences to avoid trapped I/O with multiple LVs.
  Annotate critical section debug messages.
  Fix reduction of mirrors with striped segments to always align to stripe size.
  Validate mirror segments size.
  Fix extent rounding for striped volumes (never reduce more than requested).
  Fix create_temp_name to replace any '/' found in the hostname with '?'.
  Always use append to file in lvmdump (selinux policy - no file truncation).
  Propagate test mode to clvmd to skip activation and changes to held locks.
  Defer writing PV labels to vg_write.
  Store label_sector only in struct physical_volume.